add naother english recipe

--- a/adding_recipe.ipynb
+++ b/adding_recipe.ipynb
@@ -2,23 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
-    "recipe_id_name = \"snacks_green_salad_with_balsamic\"\n",
+    "recipe_id_name = \"snacks_greek_salad\"\n",
     "recipe_ru_name = \"Греческий салат\"\n",
-    "recipe_eng_name = \"Salad Leaves with Balsamic Dressing\"\n",
-    "recipe_time_ru = \"5 мин\"\n",
-    "recipe_time_eng = \"5 minutes\"\n",
+    "recipe_eng_name = \"Greek Salad\"\n",
+    "recipe_time_ru = \"10 мин\"\n",
+    "recipe_time_eng = \"10 minutes\"\n",
     "recipe_portion_ru = \"2 порции\"\n",
     "recipe_portion_eng = \"Serves 2\"\n",
-    "ingredients_ru = [\"100 г зелёного салата\", \"5 г оливкового масла\", \"5 г бальзамического крема\"]\n",
-    "ingredients_eng = [\"100 g green salad\", \"5 g olive oil\", \"5 g balsamic cream\"]\n",
-    "instruction_ru = [\"Выложите зелёные листья в миску.\", \"Добавьте оливковое масло и бальзамический крем, аккуратно перемешайте.\"]\n",
-    "instruction_eng = [\"Place the green leaves in a bowl.\", \"Add the olive oil and balsamic cream, and mix gently.\"]\n",
-    "note_ru = 'Можно сбрызнуть капелькой лимона для кокетства.'\n",
-    "note_eng = 'You can spritz a little lemon for a touch of flair.'"
+    "ingredients_ru = [\n",
+    "  \"2 средних огурца\", \n",
+    "  \"1 помидор\", \n",
+    "  \"1 сладкий перец (не болгарский)\", \n",
+    "  \"1/2 средней красной луковицы\", \n",
+    "  \"50 г феты\", \n",
+    "  \"2 столовые ложки оливкового масла\", \n",
+    "  \"Соль, орегано по вкусу\"]\n",
+    "ingredients_eng = [\n",
+    "  \"2 medium cucumbers\",\n",
+    "  \"1 tomato\",\n",
+    "  \"1 sweet pepper (not bell pepper)\",\n",
+    "  \"1/2 medium red onion\",\n",
+    "  \"50 g feta cheese\",\n",
+    "  \"2 tablespoons olive oil\",\n",
+    "  \"Salt and oregano to taste\"\n",
+    "]\n",
+    "instruction_ru = [\n",
+    "  \"Нарежьте все овощи и смешайте их в миске, добавьте соль и орегано.\", \n",
+    "  \"Выложите целый кусок феты сверху овощей и полейте оливковым маслом.\", \n",
+    "  \"Разломайте фету прямо в миске ложкой.\"]\n",
+    "instruction_eng = [\n",
+    "  \"Chop all the vegetables and combine them in a bowl. Add salt and oregano to taste.\",\n",
+    "  \"Place a whole piece of feta on top of the vegetables and drizzle with olive oil.\",\n",
+    "  \"Break the feta directly in the bowl using a spoon.\"\n",
+    "]\n",
+    "note_ru = 'Огурец обязательно очистить от кожуры, а фету ни в коем случае не нарезать заранее. Можете добавить 50 г оливок Каламата.'\n",
+    "note_eng = 'Be sure to peel the cucumbers, and do not cut the feta in advance. You can also add 50 g of Kalamata olives.'"
    ]
   },
   {
@@ -30,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,19 +103,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<li>100 г зелёного салата</li> \n",
-      "<li>5 г оливкового масла</li> \n",
-      "<li>5 г бальзамического крема</li> \n",
+      "<li>2 средних огурца</li> \n",
+      "<li>1 помидор</li> \n",
+      "<li>1 сладкий перец (не болгарский)</li> \n",
+      "<li>1/2 средней красной луковицы</li> \n",
+      "<li>50 г феты</li> \n",
+      "<li>2 столовые ложки оливкового масла</li> \n",
+      "<li>Соль, орегано по вкусу</li> \n",
       "\n",
-      "<li>Выложите зелёные листья в миску.</li> \n",
-      "<li>Добавьте оливковое масло и бальзамический крем, аккуратно перемешайте.</li> \n",
+      "<li>Нарежьте все овощи и смешайте их в миске, добавьте соль и орегано.</li> \n",
+      "<li>Выложите целый кусок феты сверху овощей и полейте оливковым маслом.</li> \n",
+      "<li>Разломайте фету прямо в миске ложкой.</li> \n",
       "\n"
      ]
     }
@@ -105,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -427,16 +454,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "                    <a href=\"recipes/snacks_green_salad_with_balsamic.html\" class=\"recipe-card\"> \n",
+      "                    <a href=\"recipes/snacks_greek_salad.html\" class=\"recipe-card\"> \n",
       "                        <div class=\"recipe-image\">\n",
-      "                            <img src=\"site-photos/snacks_green_salad_with_balsamic.jpg\" alt=\"Салатные листья с бальзамиком\"> \n",
+      "                            <img src=\"site-photos/snacks_greek_salad.jpg\" alt=\"Греческий салат\"> \n",
       "                            <div class=\"recipe-overlay\">\n",
       "                                <i class=\"fas fa-external-link-alt\"></i>\n",
       "                            </div>\n",
       "                        </div>\n",
       "                        <div class=\"recipe-info\">\n",
-      "                            <h3>Салатные листья с бальзамиком</h3> \n",
-      "                            <p class=\"recipe-time\"><i class=\"far fa-clock\"></i> 5 мин </p> \n",
+      "                            <h3>Греческий салат</h3> \n",
+      "                            <p class=\"recipe-time\"><i class=\"far fa-clock\"></i> 10 мин </p> \n",
       "                        </div>\n",
       "                    </a>\n"
      ]
@@ -455,14 +482,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "snacks_green_salad_with_balsamic.html\n"
+      "snacks_greek_salad.html\n"
      ]
     }
    ],
@@ -479,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +518,7 @@
       "<head>\n",
       "    <meta charset=\"UTF-8\">\n",
       "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
-      "    <title>Салатные листья с бальзамиком - Кулинарные заметки</title>\n",
+      "    <title>Греческий салат - Кулинарные заметки</title>\n",
       "    <!-- Favicon (иконка вкладки) -->\n",
       "    <link rel=\"icon\" href=\"../assets/icons/icons8-girl-64.png\" type=\"image/png\">\n",
       "    <link rel=\"stylesheet\" href=\"../style.css\">\n",
@@ -614,24 +641,28 @@
       "        </a>\n",
       "\n",
       "        <div class=\"recipe-header\">\n",
-      "            <h1>Салатные листья с бальзамиком</h1>\n",
+      "            <h1>Греческий салат</h1>\n",
       "            <div class=\"recipe-meta\">\n",
-      "                <span><i class=\"far fa-clock\"></i> 5 мин</span>\n",
+      "                <span><i class=\"far fa-clock\"></i> 10 мин</span>\n",
       "                <span><i class=\"fas fa-user-friends\"></i> 2 порции</span>\n",
       "\n",
       "            </div>\n",
       "        </div>\n",
       "\n",
-      "        <img src=\"../site-photos/snacks_green_salad_with_balsamic.jpg\" \n",
-      "             alt=\"Салатные листья с бальзамиком\" class=\"recipe-image-main\">\n",
+      "        <img src=\"../site-photos/snacks_greek_salad.jpg\" \n",
+      "             alt=\"Греческий салат\" class=\"recipe-image-main\">\n",
       "\n",
       "        <div class=\"recipe-content\">\n",
       "            <div class=\"ingredients\">\n",
       "                <h2><i class=\"fas fa-shopping-basket\"></i> Ингредиенты</h2>\n",
       "                <ul>\n",
-      "                    <li>100 г зелёного салата</li> \n",
-      "<li>5 г оливкового масла</li> \n",
-      "<li>5 г бальзамического крема</li> \n",
+      "                    <li>2 средних огурца</li> \n",
+      "<li>1 помидор</li> \n",
+      "<li>1 сладкий перец (не болгарский)</li> \n",
+      "<li>1/2 средней красной луковицы</li> \n",
+      "<li>50 г феты</li> \n",
+      "<li>2 столовые ложки оливкового масла</li> \n",
+      "<li>Соль, орегано по вкусу</li> \n",
       "\n",
       "\n",
       "\n",
@@ -641,15 +672,16 @@
       "            <div class=\"instructions\">\n",
       "                <h2><i class=\"fas fa-list-ol\"></i> Способ приготовления</h2>\n",
       "                <ol>\n",
-      "                    <li>Выложите зелёные листья в миску.</li> \n",
-      "<li>Добавьте оливковое масло и бальзамический крем, аккуратно перемешайте.</li> \n",
+      "                    <li>Нарежьте все овощи и смешайте их в миске, добавьте соль и орегано.</li> \n",
+      "<li>Выложите целый кусок феты сверху овощей и полейте оливковым маслом.</li> \n",
+      "<li>Разломайте фету прямо в миске ложкой.</li> \n",
       "\n",
       "                </ol>\n",
       "            </div>\n",
       "\n",
       "            \n",
       "                <div class=\"note\">\n",
-      "                <p><strong>Совет:</strong> Можно сбрызнуть капелькой лимона для кокетства </p>\n",
+      "                <p><strong>Совет:</strong> Огурец обязательно очистить от кожуры, а фету ни в коем случае не нарезать заранее. Можете добавить 50 г оливок Каламата. </p>\n",
       "                </div>\n",
       "\n",
       "        </div>\n",
@@ -686,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -694,9 +726,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        \"Салатные листья с бальзамиком\": {  \n",
-      "            ru: \"Салатные листья с бальзамиком\",\n",
-      "            en: \"Salad Leaves with Balsamic Dressing\"\n",
+      "        \"Греческий салат\": {  \n",
+      "            ru: \"Греческий салат\",\n",
+      "            en: \"Greek Salad\"\n",
       "            },\n"
      ]
     }
@@ -714,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -722,44 +754,54 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        \"snacks_green_salad_with_balsamic\":  {\n",
+      "        \"snacks_greek_salad\":  {\n",
       "            ru: {\n",
-      "                title: \"Салатные листья с бальзамиком\",\n",
+      "                title: \"Греческий салат\",\n",
       "                meta:  {\n",
-      "                    time: \"5 мин\",\n",
+      "                    time: \"10 мин\",\n",
       "                    servings: \"2 порции\"\n",
       "                  },\n",
       "                ingredients: [\n",
-      "                \"100 г зелёного салата\", \n",
-      "\"5 г оливкового масла\", \n",
-      "\"5 г бальзамического крема\", \n",
+      "                \"2 средних огурца\", \n",
+      "\"1 помидор\", \n",
+      "\"1 сладкий перец (не болгарский)\", \n",
+      "\"1/2 средней красной луковицы\", \n",
+      "\"50 г феты\", \n",
+      "\"2 столовые ложки оливкового масла\", \n",
+      "\"Соль, орегано по вкусу\", \n",
       "\n",
       "                ],\n",
       "                instructions: [\n",
-      "                \"Выложите зелёные листья в миску.\", \n",
-      "\"Добавьте оливковое масло и бальзамический крем, аккуратно перемешайте.\", \n",
+      "                \"Нарежьте все овощи и смешайте их в миске, добавьте соль и орегано.\", \n",
+      "\"Выложите целый кусок феты сверху овощей и полейте оливковым маслом.\", \n",
+      "\"Разломайте фету прямо в миске ложкой.\", \n",
       "\n",
       "                ],\n",
-      "                note: \"Можно сбрызнуть капелькой лимона для кокетства.\"\n",
+      "                note: \"Огурец обязательно очистить от кожуры, а фету ни в коем случае не нарезать заранее. Можете добавить 50 г оливок Каламата.\"\n",
       "             },\n",
-      "            eng: {\n",
-      "                title: \"Salad Leaves with Balsamic Dressing\",\n",
+      "            en: {\n",
+      "                title: \"Greek Salad\",\n",
       "                meta:  {\n",
-      "                    time: \"5 minutes\",\n",
+      "                    time: \"10 minutes\",\n",
       "                    servings: \"Serves 2\"\n",
       "                  },\n",
       "                ingredients: [\n",
-      "                \"100 g green salad\", \n",
-      "\"5 g olive oil\", \n",
-      "\"5 g balsamic cream\", \n",
+      "                \"2 medium cucumbers\", \n",
+      "\"1 tomato\", \n",
+      "\"1 sweet pepper (not bell pepper)\", \n",
+      "\"1/2 medium red onion\", \n",
+      "\"50 g feta cheese\", \n",
+      "\"2 tablespoons olive oil\", \n",
+      "\"Salt and oregano to taste\", \n",
       "\n",
       "                ],\n",
       "                instructions: [\n",
-      "                \"Place the green leaves in a bowl.\", \n",
-      "\"Add the olive oil and balsamic cream, and mix gently.\", \n",
+      "                \"Chop all the vegetables and combine them in a bowl. Add salt and oregano to taste.\", \n",
+      "\"Place a whole piece of feta on top of the vegetables and drizzle with olive oil.\", \n",
+      "\"Break the feta directly in the bowl using a spoon.\", \n",
       "\n",
       "                ],\n",
-      "                note: \"You can spritz a little lemon for a touch of flair.\"\n",
+      "                note: \"Be sure to peel the cucumbers, and do not cut the feta in advance. You can also add 50 g of Kalamata olives.\"\n",
       "             }\n",
       "        },\n"
      ]
@@ -778,15 +820,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " else if (path.includes('snacks_green_salad_with_balsamic')) {\n",
-      "recipeKey = 'snacks_green_salad_with_balsamic';\n",
+      " else if (path.includes('snacks_greek_salad')) {\n",
+      "recipeKey = 'snacks_greek_salad';\n",
       "}\n"
      ]
     }
