--- a/adding_recipe.ipynb
+++ b/adding_recipe.ipynb
@@ -815,7 +815,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. На последнем этапе в файл script.js d поискать много else if и в конце добавить следующее:"
+    "### 6. На последнем этапе в файл script.js d поискать много else if и в конце добавить следующее:"
    ]
   },
   {
